cluster-manifests/a0008/ingress-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-only-ingress-to-workload
  namespace: portop
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: portop-cargo-detail
  ingress:
  - from:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          app.kubernetes.io/name: traefik-ingress-ilb
          app.kubernetes.io/instance: traefik-ingress-ilb
